# StudioLink

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: checks.yml  release.yml
plugin/: default.project.json
plugin/src/: Main.server.luau  Types.luau
plugin/src/Tools/: AnimationInspect.luau  AssetAudit.luau  AutoDocs.luau  CharacterAction.luau  CharacterMoveTo.luau  CharacterTeleport.luau  CodeAnalyzer.luau  CrashDump.luau  DataStoreDebug.luau  DependencyMap.luau  ErrorHistory.luau  GetConsoleOutput.luau  GetStudioMode.luau  InputSimulate.luau  InsertModel.luau  InstanceTools.luau  MemoryLeakScan.luau  MicroprofilerCapture.luau  MultiClientTest.luau  NetworkMonitor.luau  PlaceDiff.luau  Profiler.luau  PublishPlace.luau  RunCode.luau  RunScriptInPlayMode.luau  ScriptPatch.luau  ScriptTools.luau  SecurityAudit.luau  StartStopPlay.luau  TestRunner.luau  UIInspector.luau  UiClick.luau  UiGetState.luau  UiSetText.luau  UndoRedo.luau  ViewportScreenshot.luau  VimCapabilityTest.luau  WaitForCondition.luau  WaitForEvent.luau  WorkspaceAnalyzer.luau
src/: error.rs  main.rs  mcp.rs  server.rs  state.rs
src/tools/: affinity.rs  animation.rs  asset_audit.rs  character.rs  core.rs  datastore.rs  debug.rs  dependencies.rs  diffing.rs  docs.rs  history.rs  input.rs  instance.rs  linter.rs  logs.rs  memory.rs  mod.rs  multi_client.rs  network.rs  profiler.rs  profiler_v2.rs  publish.rs  scenario.rs  screenshot.rs  script_patch.rs  scripts.rs  security.rs  session.rs  testing.rs  ui.rs  ui_inspector.rs  workspace.rs
(+8 files in other folders)
